# llm-report-generation

./: .gitignore  README.md  documents.js  package-lock.json  package.json
backend/: app.py  pyproject.toml  sample.env  ui.py
backend/data/: comp1_campaigns.csv  comp1_customer_metrics.csv  comp1_sales_data.csv  comp2_campaigns.csv  comp2_customer_metrics.csv  comp2_sales_data.csv
backend/data/projects/: project_cases.txt  testimonials.txt
backend/data/sales/: email_1_1.md  email_1_2.md  email_2_1.md  email_2_2.md  transcript_1.txt  transcript_2.txt
backend/utils/: hubspot_utils.py  models.py  openai_utils.py  qdrant.py  retrievers.py  sales_report.py
frontend/: package-lock.json  package.json  sample.env
frontend/public/: index.html
frontend/public/temp/: page_1.docx  page_1_mplan.docx  page_1_qbr.docx  page_2.docx  page_3.docx  page_4.docx  page_5.docx  page_6.docx  sales_report_full.docx
frontend/public/templates/: page_1.docx  page_2.docx  page_3.docx  page_4.docx  page_5.docx  page_6.docx  page_7.docx  page_8.docx
frontend/src/: App.tsx  index.css
frontend/src/components/: LoadingSpinner.tsx  PdfPlaceholder.tsx  PdfPreview.tsx  SelectorMenu.tsx  VariationsPanel.tsx
frontend/src/hooks/: usePdfGeneration.ts
frontend/src/models/: CustomDocument.ts
frontend/src/styles/: LoadingSpinner.css  PdfPlaceholder.css  VariationsPanel.css
frontend/src/utils/: docxUtils.ts  pdfUtils.ts  renderDocument.ts  retrievalService.ts
